--- a/ui.html
+++ b/ui.html
@@ -2,27 +2,31 @@
 <html>
         <head>
                 <title>sign up</title>
+		<link rel="stylesheet" type="text/css" href="elements.css">
         </head>
         <body>
-		<form id="signUp">
-			<div>
+		<div class="container">
+		<form id="signUp" class="form">
+			<h1 class="title">Sign up</h1>
+			<div class="form-group">
 				<input type="text" id="email" placeholder="Email">
 			</div>
 
-			<div>
+			<div class="form-group">
 				<input type="text" id="username" placeholder="Username">
 			</div>
 
-			<div>
+			<div class="form-group">
 				<input type="text" id="password" placeholder="Password">
 			</div>
 
-			<input type="submit" value="sign up">
+			<input type="submit" value="sign up" class="button">
 		</form>
+		</div>
         </body>
         <script>
 		document.getElementById('signUp').addEventListener("submit", signUp)
-
+//so, we asign a signup function to the button, this func takes the information entered in the form inputs and makes a post request to my api, specifically by fetching the url of my signup route, declaring a post method with headers, then sending the data through the (body) thing, firstly turning it into json,
 		function signUp(e) {
 			e.preventDefault();
 			let email = document.getElementById("email").value;
@@ -38,7 +42,9 @@
 				body:JSON.stringify({email:email, username:username, password:password})
 			})
 			.then((res) => res.json())
-			.then((data) => console.log(data)) 
+			.then((data) => {
+			localStorage.setItems("token", data.access_token);
+			}) 
 		}
         </script>
 </html>
