submit not working

--- a/ui.html
+++ b/ui.html
@@ -7,7 +7,7 @@
         <body>
 		<div class="container">
 		<form id="signUp" class="form">
-			<h2 class="title">Create an account</h2>
+			<h2 class="title">Create account</h2>
 			<div class="form-group">
 				<input type="text" id="email" placeholder="Email">
 			</div>
@@ -20,7 +20,7 @@
 				<input type="text" id="password" placeholder="Password">
 			</div>
 
-			<input type="submit" value="sign up" class="button">
+			<a onclick="document.signUp.submit()" href="http://localhost:5500/signin.html", class="button">sign up</a>
 		</form>
 		</div>
         </body>
