--- a/ui.html
+++ b/ui.html
@@ -8,6 +8,7 @@
 		<div class="container">
 		<form id="signUp" class="form">
 			<h2 class="title">Create account</h2>
+			<h3 id="output"><h3>
 			<div class="form-group">
 				<input type="text" id="email" placeholder="Email">
 			</div>
@@ -20,12 +21,13 @@
 				<input type="text" id="password" placeholder="Password">
 			</div>
 
-			<a onclick="document.signUp.submit()" href="http://localhost:5500/signin.html", class="button">sign up</a>
+			<input id="post" type="submit" value="Sign up" class="button">
 		</form>
 		</div>
         </body>
         <script>
 		document.getElementById('signUp').addEventListener("submit", signUp)
+		const button = document.getElementById('post')
 //so, we asign a signup function to the button, this func takes the information entered in the form inputs and makes a post request to my api, specifically by fetching the url of my signup route, declaring a post method with headers, then sending the data through the (body) thing, firstly turning it into json,
 		function signUp(e) {
 			e.preventDefault();
@@ -33,7 +35,7 @@
 			let username = document.getElementById("username").value;
 			let password = document.getElementById("password").value;
 			
-			fetch("http://127.0.0.1:8000/signup", {
+			const response = fetch("http://127.0.0.1:8000/signup", {
 				method: 'post',
 				headers: {
 					'accept': 'application/json, text/plain, */*',
@@ -41,11 +43,23 @@
 				},
 				body:JSON.stringify({email:email, username:username, password:password})
 			})
-			.then((res) => res.json())
-			.then((data) => {
-			localStorage.setItem("access_token", data.access_token);
-			localStorage.setItem("refresh_token", data.refresh_token);
-			}) 
+
+			if (response.status === 200) {
+			
+				response.then((res) => res.json())
+				.then((data) => {
+					localStorage.setItem("access_token", data.access_token);
+					localStorage.setItem("refresh_token", data.refresh_token);
+					window.location.assign('http://localhost:5500/signin.html');
+				})
+			} else {
+
+				response.then((res) => res.json())
+				.then((data) => {
+					let output = document.getElementById('output');
+					output += data.detail;
+				})
+
 		}
         </script>
 </html>
