--- a/ui.html
+++ b/ui.html
@@ -42,23 +42,20 @@
 					'content-type': 'application/json'
 				},
 				body:JSON.stringify({email:email, username:username, password:password})
+			}).then(res => {
+				return res.json().then(data => ({ status: res.status, data: data }));
 			})
-
-			if (response.status === 200) {
-			
-				response.then((res) => res.json())
-				.then((data) => {
+			.then(({ status, data }) => {
+				if (status === 200) {
 					localStorage.setItem("access_token", data.access_token);
-					localStorage.setItem("refresh_token", data.refresh_token);
-					window.location.assign('http://localhost:5500/signin.html');
-				})
-			} else {
-
-				response.then((res) => res.json())
-				.then((data) => {
-					let output = document.getElementById('output');
-					output += data.detail;
-				})
+            				localStorage.setItem("refresh_token", data.refresh_token);
+            				window.location.assign('http://localhost:5500/signin.html');
+				} else {
+					const output = document.getElementById('output');
+            				output.innerHTML = data.detail;
+            				setTimeout(() => output.remove(), 3000);
+				}
+			});
 
 		}
         </script>
