--- a/checkout.html
+++ b/checkout.html
@@ -3,5 +3,17 @@
 	<head>
 	  <title>Checkout</title>
 	  <script src="https://js.stripe.com/clover/stripe.js"></script>
+	  <script defer src="checkout.js"></script>
 	</head>
+	<body>
+		<form id="payment-form">
+		  <div id="payment-element">
+		    <!-- Elements will create form elements here -->
+		  </div>
+		  <button id="submit">Submit</button>
+		  <div id="error-message">
+		    <!-- Display error message to your customers here -->
+		  </div>
+		</form>
+	</body>
 </html>
