--- a/checkout.html
+++ b/checkout.html
@@ -1,21 +1,10 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Checkout</title>
-		<script src="https://js.stripe.com/v3/"></script>
-		<script defer src="checkout.js"></script>
+		<script defer="checkout.js"></script>
 	</head>
 	<body>
-		<form id="payment-form">
-			<div id="payment-element">
-			<!-- Elements will create form elements here -->
-			</div>
-			<button id="submit">Submit</button>
-			<div id="error-message">
-			<!-- Display error message to your customers here -->
-			</div>
-		</form>
+		<button id="confirm-checkout">Confirm checkout</button>
 	</body>
 </html>
