made slight changes too

--- a/checkout.html
+++ b/checkout.html
@@ -2,9 +2,10 @@
 <html>
 	<head>
 		<title>Checkout</title>
-		<script defer="checkout.js"></script>
 	</head>
 	<body>
 		<button id="confirm-checkout">Confirm checkout</button>
+
+		<script src="checkout.js"></script>
 	</body>
 </html>
