--- a/signin.html
+++ b/signin.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
         <head>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
                 <title>sign in</title>
                 <link rel="stylesheet" type="text/css" href="elements.css?v=123">
         </head>
         <body>
                 <div class="container">
                 <form id="signUp" class="form">
-                        <h2 class="title">Welcome, lets get you signed in</h2>
+                        <h2 class="title">Welcome, let's get you signed in!</h2>
 			<h3 id="output"><h3>
                         <div class="form-group">
                                 <input type="text" id="email" placeholder="Email">
