--- a/homepage.html
+++ b/homepage.html
@@ -7,7 +7,7 @@
         <body>
 		<div class="top-panel">
 		<h1>Lamazon</h1>
-		<form id="search-bar">
+		<form id="search-bar" class="form">
 			<div class="form-group1">
 				<input type="text" placeholder="Search products" id="searched-product">
 			</div>
