--- a/signin.html
+++ b/signin.html
@@ -11,11 +11,13 @@
                         <h2 class="title">Welcome, let's get you signed in!</h2>
 			<h3 id="output"><h3>
                         <div class="form-group">
-                                <input type="text" id="email" placeholder="Email">
+				<label for="email" id="email-label">Email</label>
+                                <input type="text" id="email">
                         </div>
 
                         <div class="form-group">
-                                <input type="text" id="password" placeholder="Password">
+				<label for="password" id="password-label">Password</label>
+                                <input type="text" id="password">
                         </div>
 				
 			<input id="post" type="submit" value="Sign in" class="button">
