added a cart button to the top panel

--- a/homepage.html
+++ b/homepage.html
@@ -6,14 +6,20 @@
         </head>
         <body>
 		<div class="top-panel">
-		<h1>Lamazon</h1>
-		<form id="search-bar" class="form">
+		<h1 class="centered">Lamazon</h1>
+
+		<form id="search-bar" class="form centered">
 			<div class="form-group1">
 				<input type="text" placeholder="Search products" id="searched-product">
 			</div>
 
 			<input type="submit" class="button" id="search-button" value="Search Lamazon">
 		</form>
+
+		<div id="cart-button-top">
+			<a class="link2button" href="http://localhost:5500/visitcart.html">Cart</a>
+		</div>
+
 		</div>
 		<div id="productDiv">
 			<div id="product-image"></div>
