--- a/visitcart.html
+++ b/visitcart.html
@@ -36,7 +36,7 @@
 					items.forEach(function(item) {
 						output.classList.add('text');
 						output.innerHTML += `
-							<ul>
+							<ul id="item">
 								<li>${item.name}, price:${item.price / 100}$</li>
 							</ul>
 
