--- a/homepage.html
+++ b/homepage.html
@@ -26,7 +26,7 @@
 		<div id="nav-bar">
 			<ul>
 				<li><a href="aboutme.html">about me</a></li>
-				<li><a href="">admin</a></li>
+				<li><a href="admin.html">admin</a></li>
 			</ul>
 		<div>
 
