--- a/homepage.html
+++ b/homepage.html
@@ -23,19 +23,20 @@
 
 		</div>
 		
-		<div id="nav-bar">
-			<ul>
-				<li><a href="aboutme.html">about me</a></li>
-				<li><a href="admin.html">admin</a></li>
-			</ul>
-		<div>
+		<div class="not-top-panel">
+			<div id="nav-bar">
+				<ul>
+					<li><a href="aboutme.html">about me</a></li>
+					<li><a href="admin.html">admin</a></li>
+				</ul>
+			</div>
 
-		<div id="productDiv">
-			<div id="product-image"></div>
-		<h2 id='output'></h2>
+			<div id="productDiv">
+				<div id="product-image"></div>
+			<h2 id='output'></h2>
+			</div>
+
 		</div>
-
-
 	</body>
 	<script>
 
