added admin button

--- a/ui.html
+++ b/ui.html
@@ -21,6 +21,8 @@
 				<input type="text" id="password" placeholder="Password">
 			</div>
 
+			<a id="adminButton" href="http://localhost:5500/adminsignup.html">Or signup as admin</a>
+
 			<input id="post" type="submit" value="Sign up" class="button">
 		</form>
 		</div>
