--- a/visitcart.html
+++ b/visitcart.html
@@ -66,7 +66,7 @@
 							})
 							.then(({ status, data }) => {
 							if (status === 200) {
-								window.reload();
+								window.location.reload();
 							}
 
 
